--- a/_locales/zh_TW/messages.json
+++ b/_locales/zh_TW/messages.json
@@ -211,9 +211,13 @@
 		"message": "replacement character",
 		"description": "Options page label: 'replacement character'"
 	},
-	"optionReplaceEmojisInFilename" : {
+	"optionReplaceEmojisInFilename": {
 		"message": "用文字替換表情符號",
 		"description": "Options page label: 'replace emojis with text'"
+	},
+	"optionSaveFilenameTemplateData": {
+		"message": "將檔案名稱模板數據保存到頁面中",
+		"description": "Options page label: 'save the filename template data into the page'"
 	},
 	"optionConfirmFilename": {
 		"message": "打開 “另存為” 對話框以確認文件名",
