--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -211,9 +211,13 @@
 		"message": "carácter de reemplazo",
 		"description": "Options page label: 'replacement character'"
 	},
-	"optionReplaceEmojisInFilename" : {
+	"optionReplaceEmojisInFilename": {
 		"message": "reemplazar emojis con texto",
 		"description": "Options page label: 'replace emojis with text'"
+	},
+	"optionSaveFilenameTemplateData": {
+		"message": "guardar los datos de la plantilla de nombre de archivo en la página",
+		"description": "Options page label: 'save the filename template data into the page'"
 	},
 	"optionConfirmFilename": {
 		"message": "abrir el cuadro de diálogo \"Guardar como\" para confirmar el nombre del archivo",
