--- a/_locales/ja/messages.json
+++ b/_locales/ja/messages.json
@@ -211,9 +211,13 @@
 		"message": "置換文字",
 		"description": "Options page label: 'replacement character'"
 	},
-	"optionReplaceEmojisInFilename" : {
+	"optionReplaceEmojisInFilename": {
 		"message": "絵文字をテキストに置き換える",
 		"description": "Options page label: 'replace emojis with text'"
+	},
+	"optionSaveFilenameTemplateData": {
+		"message": "ファイル名テンプレートデータをページに保存する",
+		"description": "Options page label: 'save the filename template data into the page'"
 	},
 	"optionConfirmFilename": {
 		"message": "を開く（として保存する：ファイル名を確認するためのダイアログ）",
