--- a/_locales/uk/messages.json
+++ b/_locales/uk/messages.json
@@ -591,6 +591,10 @@
 		"message": "завантажити на Google Drive",
 		"description": "Options page label: 'upload to Google Drive'"
 	},
+	"optionSaveToDropbox": {
+		"message": "завантажити на Dropbox",
+		"description": "Options page label: 'upload to Dropbox'"
+	},
 	"optionSaveToGitHub": {
 		"message": "завантажити на GitHub",
 		"description": "Options page label: 'upload to GitHub'"
