--- a/_locales/tr/messages.json
+++ b/_locales/tr/messages.json
@@ -287,6 +287,10 @@
 		"message": "metni aranabilir yap",
 		"description": "Options page label: 'make text searchable'"
 	},
+	"optionInsertEmbeddedImage": {
+		"message": "insert embedded image",
+		"description": "Options page label: 'insert embedded image'"
+	},
 	"optionsInfobarSubTitle": {
 		"message": "Bilgi çubuğu",
 		"description": "Options sub-title: 'Infobar'"
@@ -699,6 +703,10 @@
 		"message": "çerçeve içeriği",
 		"description": "Label 'Frame contents' in the log panel"
 	},
+	"logPanelEmbeddedImage": {
+		"message": "Gömülü resim",
+		"description": "Label 'Embedded image' in the log panel"
+	},
 	"logPanelStep": {
 		"message": "Adım",
 		"description": "Label 'Step' (for 'Step x / 4') in the log panel"
@@ -706,6 +714,14 @@
 	"logPanelWidth": {
 		"message": "122",
 		"description": "Width of the log panel in pixels, it should be adjusted for the longest label beginning with 'log' (e.g. 'logPanelDeferredImages')"
+	},
+	"topPanelError": {
+		"message": "SingleFileZ hata: ",
+		"description": "Label 'SingleFileZ error: ' in the top panel when displaying an error message"
+	},
+	"topPanelEmbeddedImageButton": {
+		"message": "Resmi aç...",
+		"description": "Top panel button 'Open image...' when embedding an image"
 	},
 	"profileDefaultSettings": {
 		"message": "Varsayılan ayarlar",
