--- a/_locales/uk/messages.json
+++ b/_locales/uk/messages.json
@@ -287,6 +287,10 @@
 		"message": "зробити текст доступним для пошуку",
 		"description": "Options page label: 'make text searchable'"
 	},
+	"optionInsertEmbeddedImage": {
+		"message": "insert embedded image",
+		"description": "Options page label: 'insert embedded image'"
+	},
 	"optionsInfobarSubTitle": {
 		"message": "Інфобар",
 		"description": "Options sub-title: 'Infobar'"
@@ -699,6 +703,10 @@
 		"message": "Вміст фрейму",
 		"description": "Label 'Frame contents' in the log panel"
 	},
+	"logPanelEmbeddedImage": {
+		"message": "Вбудоване зображення",
+		"description": "Label 'Embedded image' in the log panel"
+	},
 	"logPanelStep": {
 		"message": "Крок",
 		"description": "Label 'Step' (for 'Step x / 4') in the log panel"
@@ -706,6 +714,14 @@
 	"logPanelWidth": {
 		"message": "Сто двадцять і два,",
 		"description": "Width of the log panel in pixels, it should be adjusted for the longest label beginning with 'log' (e.g. 'logPanelDeferredImages')"
+	},
+	"topPanelError": {
+		"message": "Помилка SingleFileZ: ",
+		"description": "Label 'SingleFileZ error: ' in the top panel when displaying an error message"
+	},
+	"topPanelEmbeddedImageButton": {
+		"message": "Відкрити зображення..",
+		"description": "Top panel button 'Open image...' when embedding an image"
 	},
 	"profileDefaultSettings": {
 		"message": "Типові налаштування",
