--- a/_locales/zh_TW/messages.json
+++ b/_locales/zh_TW/messages.json
@@ -287,6 +287,10 @@
 		"message": "使文本可被搜索",
 		"description": "Options page label: 'make text searchable'"
 	},
+	"optionInsertEmbeddedImage": {
+		"message": "insert embedded image",
+		"description": "Options page label: 'insert embedded image'"
+	},
 	"optionsInfobarSubTitle": {
 		"message": "信息欄",
 		"description": "Options sub-title: 'Infobar'"
@@ -699,6 +703,10 @@
 		"message": "框架內容",
 		"description": "Label 'Frame contents' in the log panel"
 	},
+	"logPanelEmbeddedImage": {
+		"message": "嵌入式圖像",
+		"description": "Label 'Embedded image' in the log panel"
+	},
 	"logPanelStep": {
 		"message": "步驟",
 		"description": "Label 'Step' (for 'Step x / 4') in the log panel"
@@ -706,6 +714,14 @@
 	"logPanelWidth": {
 		"message": "122",
 		"description": "Width of the log panel in pixels, it should be adjusted for the longest label beginning with 'log' (e.g. 'logPanelDeferredImages')"
+	},
+	"topPanelError": {
+		"message": "SingleFileZ 錯誤: ",
+		"description": "Label 'SingleFileZ error: ' in the top panel when displaying an error message"
+	},
+	"topPanelEmbeddedImageButton": {
+		"message": "開啟圖片...",
+		"description": "Top panel button 'Open image...' when embedding an image"
 	},
 	"profileDefaultSettings": {
 		"message": "默認設置",
