--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -703,6 +703,10 @@
 		"message": "Contenuti frame",
 		"description": "Label 'Frame contents' in the log panel"
 	},
+	"logPanelEmbeddedImage": {
+		"message": "Immagine incorporata",
+		"description": "Label 'Embedded image' in the log panel"
+	},
 	"logPanelStep": {
 		"message": "Passo",
 		"description": "Label 'Step' (for 'Step x / 4') in the log panel"
@@ -710,6 +714,14 @@
 	"logPanelWidth": {
 		"message": "122",
 		"description": "Width of the log panel in pixels, it should be adjusted for the longest label beginning with 'log' (e.g. 'logPanelDeferredImages')"
+	},
+	"topPanelError": {
+		"message": "Errore di SingleFileZ: ",
+		"description": "Label 'SingleFileZ error: ' in the top panel when displaying an error message"
+	},
+	"topPanelEmbeddedImageButton": {
+		"message": "Apri immagine...",
+		"description": "Top panel button 'Open image...' when embedding an image"
 	},
 	"profileDefaultSettings": {
 		"message": "Impostazioni predefinite",
