--- a/_locales/pl/messages.json
+++ b/_locales/pl/messages.json
@@ -288,7 +288,7 @@
 		"description": "Options page label: 'make text searchable'"
 	},
 	"optionInsertEmbeddedImage": {
-		"message": "insert embedded image",
+		"message": "wstaw osadzony obraz",
 		"description": "Options page label: 'insert embedded image'"
 	},
 	"optionsInfobarSubTitle": {
@@ -704,7 +704,7 @@
 		"description": "Label 'Frame contents' in the log panel"
 	},
 	"logPanelEmbeddedImage": {
-		"message": "Embedded image",
+		"message": "Osadzony obraz",
 		"description": "Label 'Embedded image' in the log panel"
 	},
 	"logPanelStep": {
@@ -716,11 +716,11 @@
 		"description": "Width of the log panel in pixels, it should be adjusted for the longest label beginning with 'log' (e.g. 'logPanelDeferredImages')"
 	},
 	"topPanelError": {
-		"message": "SingleFileZ error: ",
+		"message": "Błąd SingleFileZ: ",
 		"description": "Label 'SingleFileZ error: ' in the top panel when displaying an error message"
 	},
 	"topPanelEmbeddedImageButton": {
-		"message": "Open image...",
+		"message": "Otwórz obraz...",
 		"description": "Top panel button 'Open image...' when embedding an image"
 	},
 	"profileDefaultSettings": {
