--- a/_locales/zh_TW/messages.json
+++ b/_locales/zh_TW/messages.json
@@ -288,7 +288,7 @@
 		"description": "Options page label: 'make text searchable'"
 	},
 	"optionInsertEmbeddedImage": {
-		"message": "insert embedded image",
+		"message": "嵌入圖像",
 		"description": "Options page label: 'insert embedded image'"
 	},
 	"optionsInfobarSubTitle": {
@@ -704,7 +704,7 @@
 		"description": "Label 'Frame contents' in the log panel"
 	},
 	"logPanelEmbeddedImage": {
-		"message": "嵌入式圖像",
+		"message": "嵌入圖像",
 		"description": "Label 'Embedded image' in the log panel"
 	},
 	"logPanelStep": {
@@ -716,11 +716,11 @@
 		"description": "Width of the log panel in pixels, it should be adjusted for the longest label beginning with 'log' (e.g. 'logPanelDeferredImages')"
 	},
 	"topPanelError": {
-		"message": "SingleFileZ 錯誤: ",
+		"message": "SingleFileZ 錯誤：",
 		"description": "Label 'SingleFileZ error: ' in the top panel when displaying an error message"
 	},
 	"topPanelEmbeddedImageButton": {
-		"message": "開啟圖片...",
+		"message": "打開圖片...",
 		"description": "Top panel button 'Open image...' when embedding an image"
 	},
 	"profileDefaultSettings": {
