--- a/_locales/zh_TW/messages.json
+++ b/_locales/zh_TW/messages.json
@@ -288,7 +288,7 @@
 		"description": "Options page label: 'make text searchable'"
 	},
 	"optionInsertEmbeddedImage": {
-		"message": "嵌入圖像",
+		"message": "嵌入圖片",
 		"description": "Options page label: 'insert embedded image'"
 	},
 	"optionsInfobarSubTitle": {
@@ -300,7 +300,7 @@
 		"description": "Options sub-title: 'Images'"
 	},
 	"optionLoadDeferredImages": {
-		"message": "保存延遲加載的圖像",
+		"message": "保存延遲加載的圖片",
 		"description": "Options page label: 'save deferred images'"
 	},
 	"optionLoadDeferredImagesMaxIdleTime": {
@@ -696,7 +696,7 @@
 		"description": "Options button: 'Import'"
 	},
 	"logPanelDeferredImages": {
-		"message": "延遲加載的圖像",
+		"message": "延遲加載的圖片",
 		"description": "Label 'Deferred images' in the log panel"
 	},
 	"logPanelFrameContents": {
@@ -704,7 +704,7 @@
 		"description": "Label 'Frame contents' in the log panel"
 	},
 	"logPanelEmbeddedImage": {
-		"message": "嵌入圖像",
+		"message": "嵌入圖片",
 		"description": "Label 'Embedded image' in the log panel"
 	},
 	"logPanelStep": {
